--- a/src/feature/Tables/Table.scss
+++ b/src/feature/Tables/Table.scss
@@ -15,7 +15,7 @@
     background-color: #e0efff;
   }
   td.zero{
-    background-color: #e0efff;
+    background-color: #ffffff;
   }
   td.one{
     background-color:#ffff5b;
