--- a/src/feature/Tables/Table.scss
+++ b/src/feature/Tables/Table.scss
@@ -1,29 +1,30 @@
 .ghost-table {
   border: solid black 1px;
   border-collapse: collapse;
-  th, td{
+  th,
+  td {
     border: solid black 1px;
     padding: 5px;
   }
-  td.undetermined{
+  td.undetermined {
     background-color: #fff;
   }
-  td.determined{
+  td.determined {
     background-color: #ffe5f2;
   }
-  td.exclued{
+  td.exclued {
     background-color: #e0efff;
   }
-  td.zero{
+  td.zero {
     background-color: #ffffff;
   }
-  td.one{
-    background-color:#ffff5b;
+  td.one {
+    background-color: #ffff5b;
   }
-  td.two{
-    background-color:#ffad5b;
+  td.two {
+    background-color: #ffad5b;
   }
-  td.three{
-    background-color:#ff5b5b;
+  td.three {
+    background-color: #ff5b5b;
   }
 }
